--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ testimonials:
 seo: 
   title: Mana Mei - Liberation Through Movement Founder, International Feminine Embodiment Leader
   description: Discover the transformative power of feminine embodiment with Mana Mei. Explore our unique blend of movement, dance, and somatic practices designed to empower women through self-expression and bodily liberation. Join our global community and awaken your inner strength today.
-  keywords: Mana Mei, feminine embodiment, liberation through movement, somatic dance, empowerment, self-expression, movement founder, international leader, feminine power, personal transformation
+  keywords: Mana Mei, feminine embodiment, liberation through movement, somatic dance, empowerment, self-expression, movement founder, international leader, feminine power, personal transformation, embodiend movement
   social_image: /uploads/icons/manamei-11.png
   hide-from-google: false
 ---
