--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -2,12 +2,12 @@
 layout: default
 slug: liberation-through-movement-mentorship
 title: Liberation Through Movement Mentorship
-description_html: <p>Add description here</p>
+description_html: 
 featured-image: /uploads/images/manamei-24.jpg
 heading:
   title: Liberation Through Movement Mentorship
   subtitle: Mentorship & Facilitator Training
-  description_html: Short description here.
+  description_html: 
   button-enroll:
     text: Join the waitlist
     url: /mentorship-waitlist.html
@@ -192,12 +192,12 @@ brochure-2:
       image_focus: 
       overlay_style: 
   border: border-y border-feature
-seo:
-  title: Liberation Through Movement Menotrship
-  description:
-  keywords:
-  social_image:
-  hide-from-google: true
+seo: 
+  title: Liberation Through Movement Mentorship & Facilitator Training
+  description: This unique 4-month program blends classical dance, somatic movement, and expressive dance to harmonize feminine and masculine energies, fostering self-awareness, peace, and authentic leadership. 
+  keywords: Liberation Through Movement, mentorship, empowerment, leadership, feminine energy, masculine harmony, somatic movement, expressive dance, Mana Mei, embodied movement facilitator training
+  social_image: /uploads/images/manamei-24.jpg
+  hide-from-google: false
 ---
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
