--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -138,7 +138,7 @@ cta:
 seo: 
   title: Liberation Through Movement - A Global Women's Embodiment Tribe
   description: Join our Liberation Through Movement tribe, a global community for women to explore feminine embodiment through dance and movement. Dive into a journey of self-discovery, empowerment, and connection, guided by Mana Mei. Embrace the transformative power of sisterhood and creative expression.
-  keywords: Liberation Through Movement, feminine embodiment, women's empowerment, dance and movement, global community, Mana Mei, sisterhood, creative expression, self-discovery, embodiment practices
+  keywords: Liberation Through Movement, feminine embodiment, women's empowerment, dance and movement, global community, Mana Mei, sisterhood, creative expression, self-discovery, embodiment practices, embodied movement
   social_image: /uploads/images/manamei-59.jpg
   hide-from-google: false
 ---
