--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -232,7 +232,7 @@ cta:
 seo: 
   title: Mana Movement Foundations - Realign with the Natural Feminine Way
   description: Dive into Mana Movement Foundations, a powerful introductory course by Mana Mei focusing on mind-body-spirit harmony through feminine pathways of movement. Explore seated to standing practices that foster creativity, fluidity, and authentic expression.
-  keywords: Mana Movement Foundations, feminine pathways, creative potential, mind-body-spirit harmony, seated to standing movement, Mana Mei course, authentic expression, holistic wellbeing
+  keywords: Mana Movement Foundations, feminine pathways, creative potential, mind-body-spirit harmony, seated to standing movement, Mana Mei course, authentic expression, embodied movement, embodied dance
   social_image: /uploads/images/manamei-49.jpg
   hide-from-google: false
 ---
