--- a/mentorship-waitlist.html
+++ b/mentorship-waitlist.html
@@ -8,6 +8,12 @@ cta:
     background_image: /uploads/images/manamei-4.jpg
     background_position: 75% 50%
     overlay_style: light
+seo: 
+  title: Join the Mentorship Waitlist - Be First to Know When Mentorship Applications Reopen
+  description: Sign up for the exclusive waitlist to be the first to know about the reopening of Mana Mei's mentorship applications. Discover a unique blend of dance and movement practices designed for deep personal growth, self-expression, and inner balance.
+  keywords: mentorship waitlist, Mana Mei, personal growth, self-expression, classical dance, somatic movement, expressive dance, self-love, sensuality, authenticity, embodied movement
+  social_image: https://manamei.embodiedcreativeagency.com/path-to-waitlist-image.jpg
+  hide-from-google: false
 ---
 
 <!-- Opt-In -->
