--- a/offerings.html
+++ b/offerings.html
@@ -46,7 +46,7 @@ cta:
 seo: 
   title: Mana Mei Courses & Programs - Transformative Feminine Embodiment Journey
   description: Explore Mana Mei's offerings, including online courses and mentorship in feminine embodiment and movement. Begin your journey to self-empowerment and join a global community of women embracing their inner strength through dance, somatic practices, and creative expression.
-  keywords: Mana Mei, feminine empowerment, movement mentorship, embodiment practices, online dance programs, somatic exercises, women's community, self-expression, inner strength
+  keywords: Mana Mei, feminine empowerment, movement mentorship, embodiment practices, online dance programs, somatic exercises, women's community, self-expression, inner strength, embodied movement
   social_image: /uploads/icons/manamei-11.png
   hide-from-google: false
 ---
