--- a/about.html
+++ b/about.html
@@ -46,12 +46,12 @@ gallery:
  - image_path: /uploads/images/manamei-37.jpg
    seo-description:
    image_focus: 
-seo:
-  title: About Mana Mei
-  description:
-  keywords:
-  social_image:
-  hide-from-google: true
+seo: 
+  title: About Mana Mei - Liberation Through Movement Founder, International Feminine Embodiment Leader
+  description: Discover Mana Mei's journey from a lifelong dancer to a beacon of liberation and empowerment through movement. Learn about her mission to guide women towards self-healing, pleasure, and authentic expression through the transformative power of dance.
+  keywords: Mana Mei, dance journey, liberation through movement, empowerment, self-healing, authentic expression, feminine power, somatic practices, embodied movement
+  social_image: /uploads/images/manamei-57.jpg
+  hide-from-google: false
 ---
 
 <!-- About Mana Mei -->
