youtube link fix

--- a/mana-movement.html
+++ b/mana-movement.html
@@ -17,7 +17,7 @@ heading:
     show: true
     type: youtube
     text: Watch the video
-    url: https://manamei.teachable.com/p/mana-movement-sales
+    url: https://www.youtube.com/embed/5sEVM981_X0?si=8lwzWDFyemeUsPqJ
   background_image: /uploads/images/manamei-27.jpg
   overlay_style: medium
 course-description:
