--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -12,13 +12,13 @@ heading:
   description: A powerful introductory course to the life-changing MANA Movement Practice
   button-enroll:
     text: Enroll now
-    url: https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
+    url: https://manamei.teachable.com/p/mana-movement-foundations
   button-video:
     show: true
     type: youtube
     text: Watch the video
     type: youtube
-    url: https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
+    url: https://www.youtube.com/embed/5sEVM981_X0?si=ZQjVEKlLQNLUTPLR
   background_image: /uploads/images/manamei-49.jpg
   overlay_style: medium
 banner:
@@ -189,13 +189,13 @@ investment:
   pricing:
     pay-in-full:
       heading: Pay in full
-      price: $22
+      price: $28
     payment-plan:
       show: false
       heading: Payment plan
       price:
   button: 
-    url: https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
+    url: https://manamei.teachable.com/p/mana-movement-foundations
     text: Enroll Now
   background_image: 
   overlay_style: 
@@ -224,7 +224,7 @@ cta:
     master creator of your life and realign with the life you desire.</p>
   button:
     text: Enroll now
-    url: https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
+    url: https://manamei.teachable.com/p/mana-movement-foundations
   background-image:
     background_image: /uploads/images/manamei-51.jpg
     background-position: center
