--- a/mentorship-application.html
+++ b/mentorship-application.html
@@ -298,7 +298,7 @@ layout: default
         </fieldset>
 
         <!-- How did you hear about me? -->
-        <fieldset class="mt-12 mb-8">
+        <fieldset class="mt-12">
             <legend class="mb-2">
                 Where did you hear about me?
             </legend>
