--- a/mentorship-application.html
+++ b/mentorship-application.html
@@ -1,12 +1,15 @@
 ---
 layout: default
+title: Liberation Through Movement Mentorship Application
+seo: 
+  hide-from-google: true
 ---
 
-<section class="py-10p px-5p">
+<section class="p-5p">
     <h1 class="text-lg-serif text-feature mb-12">Liberation Through Movement Mentorship Application</h1>
 
     <form id="mentorship-application" name="mentorship-application" method="post" data-netlify="true"
-        action="/index.html" onSubmit="submit" data-netlify-honeypot="bot-field">
+        action="/application-thank-you.html" onSubmit="submit" data-netlify-honeypot="bot-field">
 
         <input type="hidden" name="form-name" value="mentorship-application">
         <p class="hidden">
