removed header and footer

--- a/application-thank-you.html
+++ b/application-thank-you.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="section-padding">
+<section class="p-5p">
     <h1 class="text-lg-serif text-feature">Thank You</h1>
     <p>Your application has been received, and our team will review it shortly. We will be in touch with you within the next few days regarding the next steps.</p>
 </section>
