--- a/mentorship-application.html
+++ b/mentorship-application.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: blank
 title: Liberation Through Movement Mentorship Application
 seo: 
   hide-from-google: true
 ---
 
-<section class="p-5p">
+<section class="p-10p">
     <h1 class="text-lg-serif text-feature mb-12">Liberation Through Movement Mentorship Application</h1>
 
     <form id="mentorship-application" name="mentorship-application" method="post" data-netlify="true"
@@ -86,7 +86,7 @@ seo:
             <legend class="mb-2">
                 On a scale of 1 to 10, how much of a priority is it for you to focus on your personal empowerment and
                 liberation journey right now?
-                <br>(0: not a priority at all - 10: this is the most important focus in my life right now)
+                <br><em>(0: not a priority at all - 10: this is the most important focus in my life right now)</em>
             </legend>
             <div class="flex justify-between items-center">
                 <label class="block text-center">
@@ -199,7 +199,7 @@ seo:
             <legend class="mb-2">
                 On a scale of 1 to 10, how much time and energy do you want to devote to your journey back home to your
                 personal power and liberation?
-                <br>(0: None at all, I don’t have enough time - 10: as much as it takes, this is my priority)
+                <br><em>(0: None at all, I don’t have enough time - 10: as much as it takes, this is my priority)</em>
             </legend>
             <div class="flex justify-between items-center">
                 <label class="block text-center">
@@ -348,6 +348,6 @@ seo:
             });
         </script>
 
-        <button type="submit" class="button">Submit</button>
+        <button type="submit" class="button mt-4">Submit</button>
     </form>
 </section>
