--- a/contact-thank-you.html
+++ b/contact-thank-you.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="section-padding">
+<section class="p-5p">
     <h1 class="text-lg-serif text-feature">Thank You</h1>
     <p>Thank you for reaching out. Your message has been received, and we're looking forward to connecting with you. Mana will be in touch shortly to discuss how we can support your journey.</p>
 </section>
