updated thank you page

--- a/application-thank-you.html
+++ b/application-thank-you.html
@@ -2,7 +2,13 @@
 layout: default
 ---
 
-<section class="p-5p">
+<section class="p-10p text-center">
     <h1 class="text-lg-serif text-feature">Thank You</h1>
-    <p>Your application has been received, and our team will review it shortly. We will be in touch with you within the next few days regarding the next steps.</p>
+    <div class="w-[80%] mx-auto">
+        <p>Congratulations on completing the LTM Mentorship Application!</p>
+        <p>Thank you for taking the time to thoughtfully share this information with me. I look forward to learning about you and what inspires you to take this next step in your journey back to wholeness and liberation.</p>
+        <p>What’s the next step?</p>
+        <p>If your application qualifies, you will receive an email with a link to book your free 45-minute Connection Call with Mana Mei. During this call we will discuss mentorship details, get to know eachother, and decide if this experience may be the perfect fit for you.</p>
+        <p>Please allow 24 hours for a response and I look forward to taking this next step with you!</p>
+    </div>
 </section>
