--- a/contact-thank-you.html
+++ b/contact-thank-you.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="p-5p">
+<section class="p-10p text-center">
     <h1 class="text-lg-serif text-feature">Thank You</h1>
-    <p>Thank you for reaching out. Your message has been received, and we're looking forward to connecting with you. Mana will be in touch shortly to discuss how we can support your journey.</p>
+    <p class="w-[80%] mx-auto">Thank you for reaching out. Your message has been received, and we're looking forward to connecting with you. Mana will be in touch shortly to discuss how we can support your journey.</p>
 </section>
