hide from google apply

--- a/mentorship-apply.html
+++ b/mentorship-apply.html
@@ -12,7 +12,7 @@ seo:
   title: Apply to join the Liberation Through Movement Mentorship
   description: Application to join Mana Mei's mentorship.
   social_image: https://manamei.embodiedcreativeagency.com/path-to-waitlist-image.jpg
-  hide-from-google: false
+  hide-from-google: true
 ---
 
 <!-- Opt-In -->
