--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -9,8 +9,8 @@ heading:
   subtitle: Mentorship & Facilitator Training
   description_html: 
   button-enroll:
-    text: Apply Now
-    url: /mentorship-apply.html
+    text: Join the Waitlist
+    url: /mentorship-waitlist.html
   button-video:
     show: true
     type: youtube
@@ -117,8 +117,8 @@ investment:
       heading: Payment plan
       price: $850 x 4 months
   button: 
-    url: /mentorship-apply.html
-    text: Apply Now
+    url: /mentorship-waitlist.html
+    text: Join the Waitlist
   border: 
 faq:
   heading: Frequently asked questions
@@ -178,8 +178,8 @@ cta:
   heading: Think this may be the perfect fit for you? 
   description_html: The next step is to apply! By doing this, you will receive an email with the Mentorship Brochure containing all of the details you need. </p><p>By joining the waitlist, you will be the first to know when Enrollment opens for the next round.
   button:
-    text: Apply Now
-    url: /mentorship-apply.html
+    text: Join the Waitlist
+    url: /mentorship-waitlist.html
   background-image:
     background_image: /uploads/images/manamei-64.jpg
     background-position: bottom
